--- a/src/blocks/promo/promo.pug
+++ b/src/blocks/promo/promo.pug
@@ -28,3 +28,4 @@ mixin promo()
         .promo__more
           p.promo__more-txt Pay after you get result
           a(class='promo__more-link' href='#') More info
+      #promo-helicopter.promo__helicopter
