--- a/src/blocks/social-links/social-links.pug
+++ b/src/blocks/social-links/social-links.pug
@@ -1,4 +1,4 @@
 mixin social-links()
-  a(class="social-links social-links--telegram" href='#')
-  a(class="social-links social-links--facebook" href='#')
-  a(class="social-links social-links--twitter"  href='#')
+  a(class="social-links social-links--telegram"  target="_blank" href='https://tlgrm.ru/channels/@kosmostime')
+  a(class="social-links social-links--facebook" target="_blank" href='https://www.facebook.com/mixpanel/')
+  a(class="social-links social-links--twitter"   target="_blank" href='https://twitter.com/mixpanel')
