--- a/src/blocks/nav/nav.scss
+++ b/src/blocks/nav/nav.scss
@@ -5,6 +5,7 @@
 
     &__items {
         display: flex;
+        flex-wrap: wrap;
         margin: 0 auto;
         max-width: $wrapper;
         padding-left: 0;
@@ -23,6 +24,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 5px;
+  margin-bottom: 20px;
 
   &:hover {
     .nav-item__link{
