--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -1,7 +1,7 @@
 mixin header()
   header.header
     .header__wrapper
-      a(class="header__logo" href='/') Mixpanel
+      a(class="header__logo" href='https://stillst.github.io/Mixpanel/build/') Mixpanel
       .header__links
         +tabs
         +social-links
