--- a/src/blocks/info/info.scss
+++ b/src/blocks/info/info.scss
@@ -6,6 +6,7 @@
     align-content: center;
     align-items: flex-start;
     justify-content: space-between;
+    flex-wrap:wrap;
     padding: 20px 0;
   }
 }
