--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,7 +8,7 @@
 @import './src/blocks/sprite-png/sprite-png.scss';
 @include sprites($spritesheet-sprites); // Генератор селекторов для всех картинок спрайта
 
-// БЭМ-блоки. Один БЭМ-блок = 1 файл. ВСЕГДА.
+// БЭМ-блоки. Один БЭМ-блок = 1 файл.
 @import './src/blocks/page/page.scss';
 @import './src/blocks/ticker/ticker.scss';
 @import './src/blocks/header/header.scss';
