--- a/src/blocks/nav/nav.scss
+++ b/src/blocks/nav/nav.scss
@@ -2,6 +2,7 @@
     background-color: $gray;
     padding-top: 55px;
     padding: 70px;
+    perspective: 1000px;
 
     &__items {
         display: flex;
@@ -10,6 +11,7 @@
         max-width: $wrapper;
         padding-left: 0;
         justify-content: space-between;
+        transform-style: preserve-3d;
     }
 }
 
@@ -25,6 +27,7 @@
   background-size: cover;
   border-radius: 5px;
   margin-bottom: 20px;
+  transition: all 0.2s;
 
   &:hover {
     .nav-item__link{
